--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,11 +31,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
@@ -44,7 +43,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">Visit our GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
@@ -56,6 +55,7 @@
         {% endif %}
       </header>
       <section>
+        <img src="/assets/images/crowdphoto.jpg" alt="Crowd photo" />
 
       {{ content }}
 
