Resized crowd photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         {% endif %}
       </header>
       <section>
-        <img src="/assets/images/crowdphoto.jpg" alt="Crowd photo" />
+        <img src="/assets/images/crowd.jpg" alt="Crowd photo" style="padding-bottom: 20px;" />
 
       {{ content }}
 
