--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,8 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <iframe width="250" height="570" src="http://meetu.ps/3hSWmb" frameborder="0"></iframe>
       </header>
       <section>
         <img src="/assets/images/crowd.jpg" alt="Crowd photo" style="padding-bottom: 20px;" />
