Added details of next meetup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,9 @@
         </ul>
         {% endif %}
 
+        <h2>Next meetup</h2>
+        <p><strong>Turnaround and Transformation in Tech</strong> - June 14, 2018 - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/250625163/">Register</a></p>
+
         </header>
       <section>
         <img src="/assets/images/crowd.jpg" alt="Crowd photo" style="padding-bottom: 20px;" />
