--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,9 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">Visit our GitHub Profile</a></p>
+        <p class="view"><a href="https://www.meetup.com/Syd-Technology-Leaders/">Visit our Meetup Page</a><br />
+          <a href="{{ site.github.owner_url }}">Visit our GitHub Profile</a><br />
+          <a href="https://www.redbubble.com/people/sydtechleaders/shop">Get some SydTechLeaders Swag</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
