Updated next meetup details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>Turnaround and Transformation in Tech</strong> - June 14, 2018 - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/250625163/">Register</a></p>
+        <p><strong>Topic TBA</strong> - July 19, 2018 - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
 
         </header>
       <section>
