Updated next meetup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>Style Guides, Design, and Front End Consistency</strong> - July 19, 2018 - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
+        <p><strong>Ethics in the Tech Industry</strong> - August date tbc - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
 
         </header>
       <section>
