--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong><a href="https://www.meetup.com/Syd-Technology-Leaders/events/253078235/?eventId=253078235">Ethics in the Tech Industry</a></strong> - August 30th - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
+        <p><strong><a href="https://www.meetup.com/Syd-Technology-Leaders/events/254573172/">Remuneration</a></strong> - September 20th - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
 
         </header>
       <section>
