--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong><a href="https://www.meetup.com/Syd-Technology-Leaders/events/254573172/">Remuneration</a></strong> - September 20th - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
+        <p><strong>Mental Health</strong> (part of <a href="http://mentalhealthmonth.wayahead.org.au/">NSW Mental Health Month</a>) - October 19th - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
 
         </header>
       <section>
