Update the next meeting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>Mental Health</strong> (part of <a href="http://mentalhealthmonth.wayahead.org.au/">NSW Mental Health Month</a>) - October 19th - <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join the group</a></p>
+        <p><strong>We Need To Talk</strong> a joint meeting with Sydney Female CTOs and CIOs <a href="https://www.meetup.com/Sydney-Female-CTOs-CIOs-Meetup/events/255225057/">Join the group</a></p>
 
         </header>
       <section>
