Added Culture Wars

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>A Techtivus for the rest of us!</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/256563063/">RSVP</a></p>
+        <p><strong>May 23 - Culture Wars</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/261419344/">RSVP</a></p>
 
         </header>
       <section>
