Updated September meetup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>July 18 - Security</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/261989959/">RSVP</a></p>
+        <p><strong>September 19 - YOW! Perth Reprise</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/264748383/">RSVP</a></p>
 
         </header>
       <section>
