Update for Feb 2020

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>We Need To Talk</strong> a joint meeting with Sydney Female CTOs and CIOs <a href="https://www.meetup.com/Sydney-Female-CTOs-CIOs-Meetup/events/255225057/">Join the group</a></p>
+        <p>Potpourri<a href="https://www.meetup.com/Syd-Technology-Leaders/events/268841297/">Join the group</a></p>
 
         </header>
       <section>
