--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p>Potpourri<a href="https://www.meetup.com/Syd-Technology-Leaders/events/268841297/">Join the group</a></p>
+        <p><strong>Feb 27 - Potpourri</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/268841297/">RSVP</a></p>
 
         </header>
       <section>
