Update for April meetup, topic pending

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,10 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>Feb 27 - Potpourri</strong> - <a href="https://www.meetup.com/Syd-Technology-Leaders/events/268841297/">RSVP</a></p>
+        <p><strong>April 16th - TBD</strong> - 
+          <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join Us</a>
+          <!--<a href="https://www.meetup.com/Syd-Technology-Leaders/events/268841297/">RSVP</a>-->
+        </p>
 
         </header>
       <section>
