--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,9 +57,9 @@
         {% endif %}
 
         <h2>Next meetup</h2>
-        <p><strong>December 21st - Techtivus</strong> - 
+        <p><strong>February 16th - Data: What can it do for you</strong> - 
           <a href="https://www.meetup.com/Syd-Technology-Leaders/">Join Us</a>
-          <a href="https://www.meetup.com/syd-technology-leaders/events/290046596/">RSVP</a>
+          <a href="https://www.meetup.com/en-AU/syd-technology-leaders/events/291153379/">RSVP</a>
         </p>
 
         </header>
